@@ -74,6 +74,8 @@ Gaffer::PlugPtr CompoundNumericParameterHandler<T>::setupPlug( GraphComponentPtr
 		m_plug = new PlugType( m_parameter->name(), direction, m_parameter->typedDefaultValue() );
 		plugParent->setChild( m_parameter->name(), m_plug );
 	}
+
+	setupPlugFlags( m_plug );
 	
 	return m_plug;
 }
