@@ -69,6 +69,8 @@ Gaffer::PlugPtr ObjectParameterHandler::setupPlug( GraphComponentPtr plugParent,
 		m_plug = new ObjectPlug( m_parameter->name(), direction, m_parameter->defaultValue() );
 		plugParent->setChild( m_parameter->name(), m_plug );
 	}
+
+	setupPlugFlags( m_plug );
 	
 	return m_plug;
 }
